--- a/src/Components/Landing/style.css
+++ b/src/Components/Landing/style.css
@@ -182,10 +182,12 @@
     height: 230px;
     width: 100%;
 }
-.card-img-top2{
+
+.card-img-top2 {
     height: 100px;
-    width: 200px; 
+    width: 200px;
 }
+
 .cards2 {
     max-width: 1000px;
     margin: 0 auto;
@@ -199,6 +201,23 @@
 @media only screen and (max-width: 768px) {
     .getStarted {
         background: linear-gradient(180deg, #FFA500 0%, rgba(129, 144, 128, 0.22) 50%, rgba(2, 123, 255, 0) 100%);
+    }
+
+    .text1 {
+        font-size: 56px;
+        font-weight: 700;
+        display: block;
+    }
+
+    .text2 {
+        font-size: 30px;
+        font-weight: 700;
+        display: block;
+    }
+
+    .text3 {
+        font-size: 20px;
+        font-weight: 400;
     }
 
     .getStartedSection {
@@ -224,6 +243,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin-top: 2rem;
     }
 
     .rightSection {
@@ -303,6 +323,9 @@
         grid-gap: 1rem;
         grid-template-columns: repeat(1, 1fr);
         margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .card-img-top {
@@ -310,12 +333,14 @@
         height: 230px;
         width: 100%;
     }
-    .card-img-top2{
+
+    .card-img-top2 {
         height: 100px;
-        width: 100%; 
+        width: 70%;
     }
+
     .imgSection2 {
-        width:90%;
+        width: 90%;
         height: 100%;
         padding-top: 30px;
         z-index: 999;
