--- a/src/Common/CommonHeader/style.css
+++ b/src/Common/CommonHeader/style.css
@@ -1,8 +1,10 @@
 .header-common {
     height: 50px;
     display: flex;
-    justify-content: flex-end; /* Align items to the right */
+    justify-content: space-between; /* Align items to the ends */
+    align-items: center; /* Center items vertically */
     max-width: 1100px !important;
+    padding: 0 10px; /* Add some padding */
 }
 
 .bottomStyle {
@@ -28,9 +30,9 @@
     z-index: 900;
 }
 
-.sibebar-profile {
+.sidebar-profile {
     display: flex;
-    align-items: center;
+    align-items: center; /* Center items vertically */
     margin-right: 10px;
 }
 
@@ -46,7 +48,7 @@
 }
 
 .profile-letter {
-    font-size: 40px;
+    font-size: 24px; /* Adjusted font size for better visibility */
     font-weight: 400;
 }
 
@@ -143,7 +145,7 @@
 .nav-link {
     display: flex;
     justify-content: center;
-    padding: 10px 14px 10px 14px;
+    padding: 10px 14px;
 }
 
 .menu-link {
