FIx hints formatting

--- a/src/Common/ChatBox/style.css
+++ b/src/Common/ChatBox/style.css
@@ -122,15 +122,18 @@ textarea.searchKeyText::-webkit-input-placeholder {
 
 @media only screen and (max-width: 768px) {
   .chat-bot-content {
-      margin-left: 0px;
-      height: calc(100vh - 70px);
-      margin-top: 70px;
-      display: flex;
-      justify-content: flex-end;
+    margin-left: 0px;
+    height: calc(100vh - 70px);
+    margin-top: 70px;
+    display: flex;
+    justify-content: flex-end;
 
-      padding-left: 10px;
+    padding-left: 10px;
   }
 
+}
+
+@media only screen and (max-width: 860px) {
   .tooltips {
       display: none;
   }
